--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,8 @@ jobs:
       - name: PHPUnit Tests
         uses: php-actions/phpunit@v2
         with:
-          php_version: 8.1
+          version: 9.5
+          php_version: 8.3
           php_extensions: xdebug
           bootstrap: tests/bootstrap.php
           configuration: phpunit.xml.dist
