--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "bin" : [
         "bin/feedio"
     ],
+    "abandoned": "php-feed-io/feed-io",
     "require": {
         "php": ">=8.1",
         "ext-dom": "*",
